<resources>
    <string name="app_name">M-Pay</string>
    <string name="account">Have an account?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="Login">Log in</string>
    <string name="new_user">New to M-Pay?</string>
    <string name="signup">Sign up</string>
    <string name="Welcome">Welcome to M-Pay</string>
    <string name="join">Join M-Pay today.</string>
    <string name="name">Full name</string>
    <string name="phone">Phone number</string>
    <string name="ID_NO">ID Number</string>
    <string name="Zuku">Zuku</string>
    <string name="KPLC">KPLC</string>
    <string name="NCWSC">NCWSC</string>
    <string name="KES">KES</string>
    <string name="Charges">Charges</string>
    <string name="Payment">Make Payment</string>
    <string name="Total">Total</string>
    <string name="dialog_title">Success</string>
    <string name="dialog_msg">Your payment has been received</string>
    <string name="registered">You have successfully registered and logged in.</string>
    <string name="item">Add Utility Provider</string>
    <string name="pass">Change Password</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mtdPayment">Method of payment</string>
    <string name="MPesa">M-Pesa</string>
    <string name="Card">Card</string>
    <string name="Save">Save</string>
    <string name="AccounNO">Enter account number</string>
    <string name="Save_alertbox">Save successfully</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Method_payment">Choose method of payment below</string>
    <string name="title_activity_utility">Utility</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change password</string>
    <string name="make_payment">Make payment</string>
    <string name="Utility_provider">Utility provider</string>
    <string name="card_number">Card number</string>
    <string name="security_code">Security code</string>
    <string name="find_your_m_pay_account">Find your M-Pay account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="Search">Search</string>
    <string name="enter_expiry_date">Enter expiry date</string>
    <string name="choose_method_of_payment_below">Choose method of payment below</string>
    <string name="title_activity_change_password">Change_password</string>
    <string name="Update_pass">Your password has been successfully updated</string>
    <string name="title_activity_transaction">Transaction</string>
    <string name="transaction_summary">Transaction summary</string>
</resources>
