<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/make_payment" />
        <item
            android:id="@+id/nav_utility"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Utility_provider" />
        <item
            android:id="@+id/nav_password"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/logout" />
    </group>

</menu>
