<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mwakidoshi.bluewhite.Home"
    tools:showIn="@layout/app_bar_home">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please make your payment below"
        android:layout_alignParentTop="true"
        tools:ignore="HardcodedText" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Zuku"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/KES"
        android:layout_above="@+id/checkBox2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/KPLC"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/checkBox2"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/KES" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/NCWSC"
        android:layout_below="@+id/checkBox2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/checkBox6"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/KES" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:inputType="textPersonName"
        android:hint="@string/Charges"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/checkBox6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:ems="7"
        android:inputType="textPersonName"
        android:hint="@string/Total"
        android:layout_alignBaseline="@+id/editText6"
        android:layout_alignBottom="@+id/editText6"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/choose_method_of_payment_below"
        android:layout_below="@+id/editText6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rGroup"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp">

        <RadioButton
            android:id="@+id/paymentMPesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MPesa"
            android:onClick="selectPayment" />

        <RadioButton
            android:id="@+id/paymentCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/Card"
            android:onClick="selectPayment"/>
        <EditText
            android:id="@+id/result_Number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/card_number"
            android:layout_marginTop="-8dp"
            android:ems="10"
            android:inputType="number" />
        <EditText
            android:id="@+id/result_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/security_code"
            android:layout_marginTop="-8dp"
            android:ems="10"
            android:inputType="number" />
        <EditText
            android:id="@+id/expiry_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_expiry_date"
            android:layout_marginTop="-8dp"
            android:ems="10"
            android:inputType="date" />



    </RadioGroup>

    <Button
        android:id="@+id/btnPayment"
        android:layout_width="321dp"
        android:layout_height="54dp"
        android:text="@string/make_payment"
        android:background="@drawable/angle"
        android:textSize="19dp"
        android:gravity="center"
        tools:layout_editor_absoluteY="234dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="52dp"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/rGroup"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
